--- a/src/pug/_head.pug
+++ b/src/pug/_head.pug
@@ -1,11 +1,12 @@
 head
   meta(charset="utf-8")
   link(rel='stylesheet', href='./css/common.css')
-  link(rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png")
   link(rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png")
   link(rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png")
+  link(rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png")
   link(rel="manifest" href="img/site.webmanifest")
   link(rel="mask-icon" href="img/safari-pinned-tab.svg" color="#ffffff")
   meta(name="msapplication-TileColor" content="#ffffff")
   meta(name="theme-color" content="#ffffff")
+  <script src="https://code.iconify.design/1/1.0.3/iconify.basic.min.js"></script>
   title #{title}
