--- a/src/scss/_color.scss
+++ b/src/scss/_color.scss
@@ -1,2 +1,5 @@
-$body_color: #f1f1f1;
-$standard_text: #32373c;
+$background_body: #f5f5f5;
+$text_main: #32373c;
+$text_sub: #666;
+$github:#161614;
+$twitter:#55acee;
