--- a/src/scss/_color.scss
+++ b/src/scss/_color.scss
@@ -1,5 +1,9 @@
 $background_body: #f5f5f5;
 $text_main: #32373c;
 $text_sub: #666;
+$text_portfolio_container:#fff;
+
+$background_portfolio_text: rgba(0, 0, 0, 0.6);
+
 $github:#161614;
 $twitter:#55acee;
