--- a/src/scss/_size.scss
+++ b/src/scss/_size.scss
@@ -6,6 +6,15 @@ $height_icon_image: $width_icon_image;
 $width_button:60px;
 $height_button:$width_button;
 
+$width_portfolio__items: 800px;
+
+$width_portfolio__item: 388px;
+$height_portfolio__item: 250px;
+
 $fontsize_html: 18px;
 $fontsize_main: 1.6rem;
 $fontsize_sub: 1.2rem;
+
+$fontsize_container_title: 1.2rem;
+$fontsize_container_description: 0.7rem;
+$lineheight_container_description: 0.9rem;
