--- a/src/pug/portfolio_page/_head.pug
+++ b/src/pug/portfolio_page/_head.pug
@@ -8,4 +8,4 @@ head
   link(rel="mask-icon" href="img/safari-pinned-tab.svg" color="#ffffff")
   meta(name="msapplication-TileColor" content="#ffffff")
   meta(name="theme-color" content="#ffffff")
-  title #{title} | Portfolio
+  title #{title}
