--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -18,12 +18,14 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 100%;
   background-color: $background_body;
 }
 
 .main {
   display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
   margin-top: 120px;
   width: $width_main;
 }
@@ -80,5 +82,76 @@ body {
     background-color: $twitter;
 
     @include button;
+  }
+}
+
+.portfolio {
+  margin-top: 110px;
+
+  @include container;
+
+  &__title {
+    margin-top: 12px;
+    width: 100%;
+    text-align: center;
+    font-size: $fontsize_main;
+  }
+
+  &__items {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 40px;
+    width: $width_portfolio__items;
+  }
+
+  &__item {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 24px;
+    width: $width_portfolio__item;
+    height: $height_portfolio__item;
+    border-radius: 10px;
+    box-shadow: 0px 6px 12px 4px rgba($color: #000000, $alpha: 0.3);
+  }
+
+  &__image {
+    width: $width_portfolio__item;
+
+    object-fit: contain;
+  }
+}
+
+.text_container {
+  position: absolute;
+  bottom: 0;
+  box-sizing: border-box;
+  padding: 12px;
+  width: 100%;
+  height: 80px;
+  background-color: $background_portfolio_text;
+
+  &__title {
+    color: $text_portfolio_container;
+    font-size: $fontsize_container_title;
+  }
+
+  &__description {
+    margin-top: 6px;
+    color: $text_portfolio_container;
+    font-size: $fontsize_container_description;
+    line-height: $lineheight_container_description;
+  }
+}
+
+.footer {
+  width: 100%;
+
+  &__text {
+    margin-top: 130px;
+    margin-bottom: 30px;
+    width: 100%;
+    text-align: center;
   }
 }
