ポートフォリオページを作成

--- a/src/pug/portfolio_item/_portfolio_item__work1.pug
+++ b/src/pug/portfolio_item/_portfolio_item__work1.pug
@@ -1,4 +1,6 @@
 - var link = "./portfolio_page__work1.html";
+- var image_path = "img/portfolio/dummy_01.jpg";
+- var image_alt = "ポートフォリオ1の画像";
 - var container__title = "Portfolio1";
 - var container__description = "説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1";
 
