--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -1,3 +1,6 @@
+@import 'color';
+@import 'size';
+
 @mixin container {
     display: flex;
     align-items: center;
@@ -6,11 +9,25 @@
     width: 100%;
 }
 
+@mixin image_base {
+    width: $width_portfolio__item;
+    height: $height_portfolio__item;
+    border-radius: 10px;
+    box-shadow: 0px 6px 12px 4px rgba($color: #000000, $alpha: 0.3);
+}
+
+@mixin button_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 @mixin button {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    margin: 0 5px;
     width: $width_button;
     height: $height_button;
     border-radius: $width_button / 2;
@@ -18,4 +35,25 @@
     &:hover {
         cursor: pointer;
     }
+}
+
+@mixin text {
+    margin-top: 12px;
+    width: 100%;
+    text-align: center;
+}
+
+@mixin text_main {
+    color: $text_main;
+    font-weight: bold;
+    font-size: $fontsize_main;
+
+    @include text;
+}
+
+@mixin text_sub {
+    color: $text_sub;
+    font-size: $fontsize_sub;
+
+    @include text;
 }
