--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -5,6 +5,8 @@
 @import 'mixin';
 @import 'size';
 
+@import 'portfolio_page';
+
 * {
   color: $text_main;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
@@ -49,26 +51,16 @@ body {
   width: 100%;
 
   &__full {
-    margin-top: 12px;
-    width: 100%;
-    text-align: center;
-    font-size: $fontsize_main;
+    @include text_main;
   }
 
   &__handle {
-    margin-top: 12px;
-    width: 100%;
-    text-align: center;
-    font-size: $fontsize_sub;
+    @include text_sub;
   }
 }
 
 .sns {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 18px;
-  width: $width_button * 2 + 10px;
+  @include button_container;
 }
 
 .button {
@@ -83,6 +75,12 @@ body {
 
     @include button;
   }
+
+  &_link {
+    background-color: $link;
+
+    @include button;
+  }
 }
 
 .portfolio {
@@ -91,10 +89,7 @@ body {
   @include container;
 
   &__title {
-    margin-top: 12px;
-    width: 100%;
-    text-align: center;
-    font-size: $fontsize_main;
+    @include text_main;
   }
 
   &__items {
@@ -110,10 +105,8 @@ body {
     position: relative;
     overflow: hidden;
     margin-bottom: 24px;
-    width: $width_portfolio__item;
-    height: $height_portfolio__item;
-    border-radius: 10px;
-    box-shadow: 0px 6px 12px 4px rgba($color: #000000, $alpha: 0.3);
+
+    @include image_base;
   }
 
   &__image {
