--- a/src/scss/_size.scss
+++ b/src/scss/_size.scss
@@ -11,10 +11,12 @@ $width_portfolio__items: 800px;
 $width_portfolio__item: 388px;
 $height_portfolio__item: 250px;
 
-$fontsize_html: 18px;
-$fontsize_main: 1.6rem;
-$fontsize_sub: 1rem;
+$fontsize_html: 16px;
+$fontsize_main: 1.75rem;
+$fontsize_about-sub-title: 1.375rem;
+$fontsize_sub: 1.125rem;
+$fontsize_about_text: 1rem;
 
-$fontsize_container_title: 1.2rem;
-$fontsize_container_description: 0.7rem;
-$lineheight_container_description: 0.9rem;
+$fontsize_container_title: 1.375rem;
+$fontsize_container_description: 0.75rem;
+$lineheight_container_description: 1.5rem;
