--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -6,6 +6,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    margin-bottom: 12px;
     width: 100%;
 }
 
@@ -38,7 +39,7 @@
 }
 
 @mixin text {
-    margin-top: 12px;
+    margin-bottom: 12px;
     width: 100%;
     text-align: center;
 }
@@ -54,6 +55,25 @@
 @mixin text_sub {
     color: $text_sub;
     font-size: $fontsize_sub;
+    line-height: 1.75rem;
 
     @include text;
+}
+
+@mixin text_about_sub_title {
+    color: $text_main;
+    font-weight: bold;
+    font-size: $fontsize_about-sub-title;
+    line-height: 1.75rem;
+
+    @include text;
+}
+
+@mixin text_about_text {
+    margin-bottom: 3rem;
+    width: 100%;
+    color: $text_sub;
+    text-align: center;
+    font-size: $fontsize_about_text;
+    line-height: 1.75rem;
 }
