--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -20,6 +20,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding-top: 120px;
   background-color: $background_body;
 }
 
@@ -28,7 +29,6 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  margin-top: 120px;
   width: $width_main;
 }
 
@@ -84,7 +84,7 @@ body {
 }
 
 .portfolio {
-  margin-top: 110px;
+  padding-top: 50px;
 
   @include container;
 
@@ -97,7 +97,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 40px;
+    margin-top: 20px;
     width: $width_portfolio__items;
   }
 
@@ -131,7 +131,7 @@ body {
   }
 
   &__description {
-    margin-top: 6px;
+    margin-top: 8px;
     color: $text_portfolio_container;
     font-size: $fontsize_container_description;
     line-height: $lineheight_container_description;
