GitHub Pagesのためにdocsディレクトリに移動

--- a/src/pug/anopost_page.pug
+++ b/src/pug/anopost_page.pug
@@ -2,7 +2,7 @@ doctype html
 - var title = "AnoPost";
 - var image_path = "img/portfolio/anopost.png";
 - var image_alt = "AnoPostの画像";
-- var description = "AnoPostは企業倫理ホットラインを簡単に作れるWebサービスです。";
+- var description = "企業倫理ホットラインを簡単に作成できるWebサービス";
 
 html(lang="ja")
   include _head
@@ -32,35 +32,35 @@ html(lang="ja")
       .about
         h2.about__title AnoPostとは
         p.about__text
-          | 企業倫理ホットラインとなる投書箱を簡単に作成できるWebサービスです。
+          | 企業倫理ホットラインとして使える匿名投書箱を簡単に作成できるWebサービス
         h3.about__sub-title 作成理由
         p.about__text
           | 以前社員数千人規模の企業に務めていた際、社内への改善要望や意見がある場合に、
           br
-          | そもそも意見を投稿できるような場所がない場合や、意見することでいづらさを感じるような場面があった。
+          | 意見を投稿できるような場所がないことや、意見することでいづらさを感じるような場面がありました。
           br
           | また、近年はハラスメント行為や企業の不祥事がニュースに取り上げられることも増えているため、
           br
-          | 問題を抱えている従業員、問題を未然に解決したい会社の双方に利点があるサービスを作成しました。
+          | 問題を抱えている従業員と問題を未然に解決したい会社の双方に利点があるサービスを作成しました。
         h3.about__sub-title 特徴
         p.about__text
           | AnoPostは公開されているWebサービスを使うことも、Herokuにデプロイして使うこともできます。
           br
-          | Herokuにデプロイする場合はリポジトリのHeroku Buttonをクリックするだけで行なえます。
+          | Herokuにデプロイする場合はリポジトリのHeroku Buttonをクリックするだけです。
           br
-          | 外部で運営されているサービスを利用できない企業もHerokuにデプロイすることで利用することができます。
+          | 外部で運営されているサービスを利用できない企業もHerokuにデプロイすることで利用可能です。
           br
           br
-          | ユーザー登録は一切必要ありません。管理者は投書箱の説明文を入力することですぐに投書箱を作成できます。
+          | ユーザー登録は一切必要ありません。管理者は必要項目を入力するだけですぐに投書箱を作成できます。
           br
           | 作成された投書箱のURLを共有するだけで投稿者も投書箱を利用できます。
           br
-          | ユーザー登録や指定されたアカウントでログインするのとは違い、匿名性が保たれます。
+          | ユーザー登録や指定されたアカウントでログインするのとは違い、匿名性が保たれるため気軽に投稿できます。
           br
           br
           | 投稿された内容は管理者のみが閲覧できます。
           br
-          | 投稿された内容はSlackに同時投稿、CSVエクスポート、JSONエクスポートすることもできるため、
+          | 投稿された内容はSlackに同時投稿、CSV形式、JSON形式でエクスポートできるため、
           br
           | 既存のワークフローにあった形式で投稿内容を利用することができます。
       include _footer
