--- a/src/pug/outline_page.pug
+++ b/src/pug/outline_page.pug
@@ -1,8 +1,8 @@
 doctype html
 - var title = "OUTLINE Watch Face";
 - var image_path = "img/portfolio/outline.png";
-- var image_alt = "AnoPostの画像";
-- var description = "文字盤上で予定を瞬時に確認できるウォッチフェイス";
+- var image_alt = "OUTLINEの画像";
+- var description = "文字盤上で予定を瞬時に確認できるWear OS用ウォッチフェイス";
 
 html(lang="ja")
   include _head
@@ -23,14 +23,14 @@ html(lang="ja")
           | 文字盤上で予定を瞬時に確認できるウォッチフェイスです。
         h3.about__sub-title 作成理由
         p.about__text
-          | 混雑した電車内や歩行中などスマホを開くのが困難な状況でも予定を確認できるようにするため
+          | 混雑した電車内や歩行中などスマホを開くのが困難な状況でも予定を確認できるようにするため作成しました。
         h3.about__sub-title 特徴
         p.about__text
           | OUTLINEは文字盤上で時刻と予定が確認できます。
           br
           | アナログ表示された文字盤と帯状に表示された予定から瞬時に予定までの時間を認識できます。
           br
-          | 予定の時間や帯の色はGoogle Calendarに設定されたものと同期しているため、
+          | 予定や帯の色はGoogle Calendarと同期しているため、
           br
-          | 普段通り予定を追加するだけで手元でも予定を認識可能にしています。
+          | 普段通りに予定を追加するだけで手元でも予定を認識可能にしています。
       include _footer
