--- a/src/pug/portfolio_item/_portfolio_item__anopost.pug
+++ b/src/pug/portfolio_item/_portfolio_item__anopost.pug
@@ -1,7 +1,7 @@
 - var link = "./anopost_page.html";
 - var image_path = "img/portfolio/anopost.png";
-- var image_alt = "ポートフォリオ1の画像";
+- var image_alt = "AnoPostの画像";
 - var container__title = "AnoPost";
-- var container__description = "Ruby on Railsを用いた企業倫理ホットライン作成サービス";
+- var container__description = "企業倫理ホットラインを簡単に作成できるWebサービス";
 
 include _portfolio_item
