--- a/src/pug/portfolio_item/_portfolio_item__atcoder_ogp.pug
+++ b/src/pug/portfolio_item/_portfolio_item__atcoder_ogp.pug
@@ -1,6 +1,6 @@
 - var link = "./atcoder_ogp_page.html";
 - var image_path = "img/portfolio/atcoder_ogp.png";
-- var image_alt = "ポートフォリオ1の画像";
+- var image_alt = "AtCoder OGPの画像";
 - var container__title = "AtCoder OGP";
 - var container__description = "GitHub ActionsとGitHub Pagesを用いたOGP自動更新ツール";
 
