--- a/src/pug/portfolio_item/_portfolio_item__portfolio.pug
+++ b/src/pug/portfolio_item/_portfolio_item__portfolio.pug
@@ -1,7 +1,7 @@
 - var link = "./portfolio_page.html";
 - var image_path = "img/portfolio/portfolio.png";
-- var image_alt = "ポートフォリオ1の画像";
-- var container__title = "Portfolioページ";
-- var container__description = "このページです。";
+- var image_alt = "Portfolioの画像";
+- var container__title = "Portfolio";
+- var container__description = "自身の作成物をまとめたページ";
 
 include _portfolio_item
