--- a/src/pug/portfolio_item/_portfolio_item__outline.pug
+++ b/src/pug/portfolio_item/_portfolio_item__outline.pug
@@ -1,7 +1,7 @@
 - var link = "./outline_page.html";
 - var image_path = "img/portfolio/outline.png";
-- var image_alt = "ポートフォリオ1の画像";
+- var image_alt = "OUTLINEの画像";
 - var container__title = "OUTLINE Watch Face";
-- var container__description = "文字盤上で予定を瞬時に確認できるウォッチフェイスです。";
+- var container__description = "文字盤上で予定を瞬時に確認できるWear OS用ウォッチフェイス";
 
 include _portfolio_item
