紹介文に強調表示を追加

--- a/src/pug/anopost_page.pug
+++ b/src/pug/anopost_page.pug
@@ -41,26 +41,36 @@ html(lang="ja")
           br
           | また、近年はハラスメント行為や企業の不祥事がニュースに取り上げられることも増えているため、
           br
-          | 問題を抱えている従業員と問題を未然に解決したい会社の双方に利点があるサービスを作成しました。
+          | <span class="about__text--bold">問題を抱えている従業員</span>と<span class="about__text--bold">問題を未然に解決したい会社</span>の双方に利点があるサービスを作成しました。
         h3.about__sub-title 特徴
         p.about__text
-          | AnoPostは公開されているWebサービスを使うことも、Herokuにデプロイして使うこともできます。
+          | AnoPostは<span class="about__text--bold">匿名の投書箱を簡単に作成できる</span>Webアプリケーションです。
           br
-          | Herokuにデプロイする場合はリポジトリのHeroku Buttonをクリックするだけです。
+          | 企業倫理ホットラインとして利用することを想定しています。
+          img.about__image(src="img/portfolio/anopost/introduction_problem.png", alt="AnoPostが解決したい問題の画像")
           br
-          | 外部で運営されているサービスを利用できない企業もHerokuにデプロイすることで利用可能です。
+          | <span class="about__text--bold">企業倫理やハラスメント行為などの問題を未然に防ぎたい</span>会社と、
+          br
+          | 問題を認知しているけど、報復を恐れるなどの理由から<span class="about__text--bold">記名で問題提起しにくい</span>従業員、
+          br
+          | 双方の課題を解決する、<span class="about__text--bold">企業倫理ホットライン</span>が簡単に作成できます。
+          img.about__image(src="img/portfolio/anopost/introduction_hotline.png", alt="AnoPostが解決したい問題の画像")
+          br
+          | ホットラインを作るためにはフォームに必要事項を入力するだけです。
+          br
+          | <span class="about__text--bold">アカウント登録などの面倒な操作は必要ありません。</span>
+          br
+          | ホットラインを作った人は利用者に<span class="about__text--bold">URLを共有するだけ</span>で利用できます。
           br
           br
-          | ユーザー登録は一切必要ありません。管理者は必要項目を入力するだけですぐに投書箱を作成できます。
+          | アカウント登録やログインをせずに投稿することができるため、
           br
-          | 作成された投書箱のURLを共有するだけで投稿者も投書箱を利用できます。
-          br
-          | ユーザー登録や指定されたアカウントでログインするのとは違い、匿名性が保たれるため気軽に投稿できます。
+          | <span class="about__text--bold">利用者が匿名で気軽に投稿できる</span>ことを目的としています。
           br
           br
-          | 投稿された内容は管理者のみが閲覧できます。
+          | 管理者は投稿された内容を管理ページから確認するのはもちろん、
           br
-          | 投稿された内容はSlackに同時投稿、CSV形式、JSON形式でエクスポートできるため、
+          | Slackにも同一の投稿をすることや、JSON、CSV形式でエクスポートすることもできるため、
           br
-          | 既存のワークフローにあった形式で投稿内容を利用することができます。
+          | <span class="about__text--bold">既存のワークフローに応じて投稿内容を利用する</span>ことができます。
       include _footer
