--- a/src/pug/outline_page.pug
+++ b/src/pug/outline_page.pug
@@ -23,7 +23,7 @@ html(lang="ja")
           | 文字盤上で予定を瞬時に確認できるウォッチフェイスです。
         h3.about__sub-title 作成理由
         p.about__text
-          | 混雑した電車内や歩行中などスマホを開くのが困難な状況でも予定を確認できるようにするため作成しました。
+          | 混雑した電車内や歩行中など<span class="about__text--bold">スマホを開くのが困難な状況でも予定を確認できる</span>ようにするため作成しました。
         h3.about__sub-title 特徴
         p.about__text
           | OUTLINEは文字盤上で時刻と予定が確認できます。
