--- a/src/pug/portfolio_page.pug
+++ b/src/pug/portfolio_page.pug
@@ -31,10 +31,10 @@ html(lang="ja")
         p.about__text
           | 作成物を一覧で閲覧できるようにするため、
           br
-          | また、gulpを用いてタスクランナーを実行し、静的サイトの開発環境構築に興味があったため。
+          | また、gulpでタスクランナーを実行し、静的サイトの開発環境を作ることに興味があったため。
         h3.about__sub-title 特徴
         p.about__text
-          | pugファイル、scssファイルを編集すると、
+          | pugファイル、scssファイルを編集すると、自動でhtml、cssを生成し、
           br
-          | 自動でhtml、cssを生成し、ブラウザがリロードされるため、すぐさま変更箇所を確認することができます。
+          | ブラウザがリロードされるため、<span class="about__text--bold">すぐさま変更箇所を確認</span>することができます。
       include _footer
