--- a/src/pug/atcoder_ogp_page.pug
+++ b/src/pug/atcoder_ogp_page.pug
@@ -29,23 +29,23 @@ html(lang="ja")
           | GitHub ActionsとGitHub Pagesを用いたOGP自動更新ツール
         h3.about__sub-title 作成理由
         p.about__text
-          | OGPとTwitterの固定ツイートを利用して、表現できる情報を拡張できないかと考えたことと、
+          | OGPとTwitterの固定ツイートを利用して、<span class="about__text--bold">表現できる情報を拡張できないかと考えた</span>ことと、
           br
           | AtCoderユーザーの多くがレーティング画像を毎回撮影して、ツイートしていることがわかり、
           br
-          | レーティングの画像を自動で撮影し手間を省くのと同時に、
+          | <span class="about__text--bold">レーティングの画像を自動で撮影し手間を省く</span>のと同時に、
           br
-          | 固定ツイートとOGPを活用した新しい情報領域を生成できると考え作成しました。
+          | <span class="about__text--bold">固定ツイートとOGPを活用した新しい情報領域を生成できる</span>と考え作成しました。
         h3.about__sub-title 特徴
         p.about__text
           | AtCoder OGPはGitHub Pages、GitHub Actions、Dockerなどを利用して作成されています。
           br
-          | 互換性やユーザーの開発環境などを考慮せず、同一の処理が行えます。
+          | 互換性やユーザーの開発環境などを考慮せず、<span class="about__text--bold">同一の処理が行えます。</span>
           br
           br
-          | 利用者は関連技術の知識がなくても、自身のアカウント名をコードに記載するだけで、
+          | 利用者は関連技術の知識がなくても、<span class="about__text--bold">自身のアカウント名をコードに記載するだけ</span>で、
           br
           | 自身のレーティング画像がOGPに設定されているGitHub Pagesを作成できます。
           br
-          | GitHub PagesのURLをツイートするだけで自動で更新されるレーティングを共有することができます。
+          | GitHub Pagesの<span class="about__text--bold">URLをツイートするだけ</span>で自動で更新されるレーティングを共有することができます。
       include _footer
