--- a/src/scss/_portfolio_page.scss
+++ b/src/scss/_portfolio_page.scss
@@ -70,5 +70,18 @@
   &__text {
     @include text_about_text;
 
+    &--bold {
+      font-weight: bold;
+    }
+  }
+
+  &__image {
+    margin: 2rem 0;
+    width: $width_portfolio__item;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0px 3px 10px 0px rgba($color: #000000, $alpha: 0.15);
+
+    object-fit: contain;
   }
 }
