--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -81,6 +81,12 @@ body {
 
     @include button;
   }
+
+  &_ruby_gem {
+    background-color: $ruby_gem;
+
+    @include button;
+  }
 }
 
 .portfolio {
