--- a/src/pug/anopost_page.pug
+++ b/src/pug/anopost_page.pug
@@ -12,7 +12,7 @@ html(lang="ja")
       .link
         a(href="https://github.com/wawawatataru/anopost" target="blank")
           include button/_github
-        a(href="https://anopost.xyz/" target="blank")
+        a(href="https://anopost.herokuapp.com/" target="blank")
           include button/_link
       .skill
         h1.skill__title 主な使用技術
