--- a/src/pug/loglog_page.pug
+++ b/src/pug/loglog_page.pug
@@ -12,7 +12,7 @@ html(lang="ja")
       .link
         a(href="https://github.com/wawawatataru/loglog" target="blank")
           include button/_github
-        a(href="https://www.loglog.me/" target="blank")
+        a(href="https://loglogme.herokuapp.com/" target="blank")
           include button/_link
       .skill
         h1.skill__title 主な使用技術
