アカウントの変更に対応

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,11 +9,11 @@ html(lang="ja")
           img.icon__image(src="img/icon.png", alt="プロフィール画像")
         .name
           h1.name__full Wataru Shime
-          h2.name__handle @wawawatataru
+          h2.name__handle @shimewtr
         .sns
-          a(href="https://github.com/wawawatataru" target="blank")
+          a(href="https://github.com/shimewtr" target="blank")
             include button/_github
-          a(href="https://twitter.com/wawawatataru" target="blank")
+          a(href="https://twitter.com/shimewtr" target="blank")
             include button/_twitter
       .portfolio
         h2.portfolio__title Portfolio
