--- a/src/pug/loglog_page.pug
+++ b/src/pug/loglog_page.pug
@@ -10,7 +10,7 @@ html(lang="ja")
     .main
       include portfolio_page/_portfolio_header
       .link
-        a(href="https://github.com/wawawatataru/loglog" target="blank")
+        a(href="https://github.com/shimewtr/loglog" target="blank")
           include button/_github
         a(href="https://loglogme.herokuapp.com/" target="blank")
           include button/_link
