--- a/src/pug/louis_page.pug
+++ b/src/pug/louis_page.pug
@@ -10,7 +10,7 @@ html(lang="ja")
     .main
       include portfolio_page/_portfolio_header
       .link
-        a(href="https://github.com/wawawatataru/louis" target="blank")
+        a(href="https://github.com/shimewtr/louis" target="blank")
           include button/_github
         a(href="https://rubygems.org/gems/jekyll-theme-louis" target="blank")
           include button/_ruby_gem
