fix #7 Add comica

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -18,6 +18,7 @@ html(lang="ja")
       .portfolio
         h2.portfolio__title Portfolio
         .portfolio__items
+          include portfolio_item/_portfolio_item__comica
           include portfolio_item/_portfolio_item__loglog
           include portfolio_item/_portfolio_item__louis
           include portfolio_item/_portfolio_item__anopost
